--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,3 +5,6 @@ spring.datasource.password=${DATABASE_PASSWORD}
 
 # CORS
 api.front-end.address=${FRONT_END_ADDRESS}
+
+# Populate Database
+spring.sql.init.mode=always
