--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ server.error.include-stacktrace=never
 # springdoc.swagger-ui.url=/open-api.json
 
 # Security
-# api.security.token.secret=${JWT_SECRET:7f789f64-fa94-4305-8b81-b369b0e3612e}
-# api.security.token.issuer=${JWT_ISSUER:School API}
+api.security.token.secret=${JWT_SECRET:7f789f64-fa94-4305-8b81-b369b0e3612e}
+api.security.token.issuer=${JWT_ISSUER:School API}
 
 # Actuator
 management.endpoints.web.exposure.include=*
